--- a/demos/react-component-demo/index1.html
+++ b/demos/react-component-demo/index1.html
@@ -11,7 +11,7 @@
     <script type="text/babel">
   class MyTitle extends React.Component {
     render() {
-      return <h1>Hello World</h1>;
+      return <h1>Hello React</h1>;
     }
   };
 
